More descriptive member IDs

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -23,19 +23,19 @@
     </div>
 
     <div id = "teamMembers">
-        <div id = "1">
+        <div id = "member1">
             <h3>1</h3>
         </div>
-        <div id = "2">
+        <div id = "member2">
             <h3>2</h3>
         </div>
-        <div id = "3">
+        <div id = "member3">
             <h3>3</h3>
         </div>
-        <div id = "4">
+        <div id = "member4">
             <h3>4</h3>
         </div>
-        <div id = "5">
+        <div id = "member5">
             <h3>5</h3>
         </div>
     </div>
