Working on Landing Page

--- a/Lab1/kat.html
+++ b/Lab1/kat.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="Resources/WV-monogram.svg">
-    <title>WeatherVanes | Home</title>
+    <title>WeatherVanes | Katrina M.</title>
     <link rel="stylesheet" href="Resources/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lacquer&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="main">
+   <div class="main" style="gap: 0px;">
   <div
     class="picture-stack"
     style="
       background: url(Resources/dark-souls-larger.png) center;
       background-size: cover;
       background-repeat: no-repeat;
+      gap: 0px;
     "
   >
     <div class="header">
-      <div class="wv-monogram">WV</div>
-      <a href="#prev-works" style="padding: 0px;"><div class="previous-works">PREVIOUS WORKS</div></a>
+      <a href="index.html" style="padding: 0px;"><div class="wv-monogram">WV</div></a>
+      <div class="previous-works">PREVIOUS WORKS</div>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
       <a href="kat.html" class="member-1">I</a>
@@ -31,7 +32,8 @@
       <a href="ryan.html" class="member-4">IV</a>
       <a href="sawyer.html" class="member-5">V</a>
     </div>
-    <div class="hero">
+
+    <div class="hero" style="backdrop-filter: blur(100px);">
       <div class="weather-vanes-logo-svg-1">
         <img class="logo" src="Resources/WeatherVanes_logo_SVG.svg" width="250" height="250"/>
       </div>
@@ -40,8 +42,9 @@
         This is where our team slogan will go.
       </div>
     </div>
+
   </div>
-  <div id="prev-works" class="previous-works2">
+  <div class="previous-works2">
     <div class="previous-works3">PREVIOUS WORKS</div>
     <div class="prev-work-1">
       <div class="text">
