Working on Individual Portfolio Sites

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="Resources/WV-monogram.svg">
     <title>WeatherVanes | Home</title>
-    <link rel="stylesheet" href="Resources/styles.css">
+    <link rel="stylesheet" href="Resources/merged-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lacquer&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
         </div>
         <div class="description">
           <div
-            class="a-central-hub-for-weather-vanes-showcasing-our-team-s-previous-projects-and-works-the-site-features-an-overview-of-who-we-are-our-team-slogan-and-dedicated-profile-pages-highlighting-each-team-member-s-contributions-designed-to-give-visitors-a-clear-picture-of-our-work-and-team-identity"
+            class="desc-text"
           >
             A central hub for WeatherVanes, showcasing our team’s previous
             projects and works. The site features an overview of who we are, our
@@ -71,7 +71,7 @@
         </div>
         <div class="description2">
           <div
-            class="an-interactive-web-application-created-by-weather-vanes-designed-to-provide-users-with-useful-tools-and-features-the-project-highlights-its-tech-stack-and-practical-applications-giving-visitors-insight-into-both-its-purpose-and-implementation"
+            class="desc-text"
           >
             An interactive web application created by WeatherVanes, designed to
             provide users with useful tools and features. The project highlights
@@ -90,7 +90,7 @@
           <div class="project-3">∘ PROJECT #3 ∘</div>
         </div>
         <div class="description">
-          <div class="project-3-description-to-be-included">
+          <div class="desc-text">
             Project #3 description to be included.
           </div>
         </div>
