--- a/Lab1/kat.html
+++ b/Lab1/kat.html
@@ -5,25 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="Resources/WV-monogram.svg">
     <title>WeatherVanes | Katrina M.</title>
-    <link rel="stylesheet" href="Resources/styles.css">
+    <link rel="stylesheet" href="Resources/merged-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lacquer&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="main" style="gap: 0px;">
-  <div
-    class="picture-stack"
-    style="
+   <div class="main">
+  <div class="picture-stack" style="
       background: url(Resources/dark-souls-larger.png) center;
       background-size: cover;
-      background-repeat: no-repeat;
-      gap: 0px;
-    "
-  >
+      background-repeat: no-repeat;">
     <div class="header">
-      <a href="index.html" style="padding: 0px;"><div class="wv-monogram">WV</div></a>
-      <div class="previous-works">PREVIOUS WORKS</div>
+      <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
       <a href="kat.html" class="member-1">I</a>
@@ -33,77 +27,209 @@
       <a href="sawyer.html" class="member-5">V</a>
     </div>
 
-    <div class="hero" style="backdrop-filter: blur(100px);">
-      <div class="weather-vanes-logo-svg-1">
-        <img class="logo" src="Resources/WeatherVanes_logo_SVG.svg" width="250" height="250"/>
+    <div class="hero">
+      <div class="member-number">
+        <div class="weather-vanes-title">I</div>
       </div>
-      <div class="weather-vanes-title">WEATHERVANES</div>
-      <div class="team-slogan-subtitle">
-        This is where our team slogan will go.
+      <div class="headshot-and-name">
+        <img src="Resources/kat.jpeg" style="aspect-ratio: inherit;" height="300px" />
+        <div class="weather-vanes-title2">Katrina Mosquera-Maykovych</div>
       </div>
     </div>
-
   </div>
-  <div class="previous-works2">
-    <div class="previous-works3">PREVIOUS WORKS</div>
-    <div class="prev-work-1">
+  <div class="portfolio-information">
+    <div class="contact-information">CONTACT INFORMATION</div>
+    <div class="contact-info">
       <div class="text">
         <div class="title">
-          <div class="weathervanes-website">∘ WEATHERVANES WEBSITE ∘</div>
+          <div class="address">ADDRESS ∘</div>
         </div>
         <div class="description">
-          <div
-            class="a-central-hub-for-weather-vanes-showcasing-our-team-s-previous-projects-and-works-the-site-features-an-overview-of-who-we-are-our-team-slogan-and-dedicated-profile-pages-highlighting-each-team-member-s-contributions-designed-to-give-visitors-a-clear-picture-of-our-work-and-team-identity"
-          >
-            A central hub for WeatherVanes, showcasing our team’s previous
-            projects and works. The site features an overview of who we are, our
-            team slogan, and dedicated profile pages highlighting each team
-            member’s contributions. Designed to give visitors a clear picture of
-            our work and team identity.
+          <div class="desc">
+            36 Farm Street, Troy, NY 12180
           </div>
         </div>
       </div>
-      <div class="image">
-        <img class="website-thumbnail" src="website-thumbnail0.png" />
-      </div>
-    </div>
-    <div class="prev-work-2">
-      <div class="text">
-        <div class="title2">
-          <div class="weathervanes-web-app">∘ WEATHERVANES WEB APP ∘</div>
-        </div>
-        <div class="description2">
-          <div
-            class="an-interactive-web-application-created-by-weather-vanes-designed-to-provide-users-with-useful-tools-and-features-the-project-highlights-its-tech-stack-and-practical-applications-giving-visitors-insight-into-both-its-purpose-and-implementation"
-          >
-            An interactive web application created by WeatherVanes, designed to
-            provide users with useful tools and features. The project highlights
-            its tech stack and practical applications, giving visitors insight
-            into both its purpose and implementation.
-          </div>
-        </div>
-      </div>
-      <div class="image">
-        <img class="website-thumbnail" src="website-thumbnail1.png" />
-      </div>
-    </div>
-    <div class="prev-work-3">
       <div class="text">
         <div class="title">
-          <div class="project-3">∘ PROJECT #3 ∘</div>
+          <div class="phone">PHONE ∘</div>
         </div>
         <div class="description">
-          <div class="project-3-description-to-be-included">
-            Project #3 description to be included.
+          <div class="_347-612-3718">(347) 612-3718</div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="email">EMAIL ∘</div>
+        </div>
+        <div class="description">
+          <div class="mosquk-rpi-edu">mosquk@rpi.edu</div>
+        </div>
+      </div>
+    </div>
+    <div class="introduction">INTRODUCTION</div>
+    <div class="introduction-statement">
+      <div
+        class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum"
+      >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="education">EDUCATION</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="secondary-school">SECONDARY SCHOOL ∘</div>
+        </div>
+        <div class="description">
+          <div class="joseph-a-foran-high-school">
+            Joseph A. Foran High School
           </div>
         </div>
       </div>
-      <div class="image">
-        <img class="website-thumbnail" src="website-thumbnail2.png" />
+      <div class="text">
+        <div class="title">
+          <div class="university-institution">UNIVERSITY / INSTITUTION ∘</div>
+        </div>
+        <div class="description">
+          <div class="rensselaer-polytechnic-institute">
+            Rensselaer Polytechnic Institute
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="degree-program">DEGREE / PROGRAM</div>
+        </div>
+        <div class="description">
+          <div class="b-s-in-csci-minor-in-math-minor-in-itws">
+            B.S. in CSCI, Minor in MATH, Minor in ITWS
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="dates">DATES</div>
+        </div>
+        <div class="description">
+          <div class="august-2022-may-2026">August 2022 - May 2026</div>
+        </div>
+      </div>
+    </div>
+    <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
+    <div class="projects-accomplishments2">
+      <div
+        class="description"
+      >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="work-experience">WORK EXPERIENCE</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-1-include-job-title">
+            WORK EXPERIENCE #1 (Include Job Title)
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">Start Date - End Date</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div
+          class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum3"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-2-include-job-title">
+            WORK EXPERIENCE #2 (Include Job Title)
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">Start Date - End Date</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div
+          class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum3"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-3-include-job-title">
+            WORK EXPERIENCE #3 (Include Job Title)
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">Start Date - End Date</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div
+          class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum3"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+    </div>
+    <div class="skills">SKILLS</div>
+    <div class="skills2">
+      <div
+        class="skill-1-skill-2-skill-3-skill-4-skill-5-skill-6-skill-7-skill-8"
+      >
+        <ul
+          class="skill-1-skill-2-skill-3-skill-4-skill-5-skill-6-skill-7-skill-8-span"
+        >
+          <li>Skill #1</li>
+          <li>Skill #2</li>
+          <li>Skill #3</li>
+          <li>Skill #4</li>
+          <li>Skill #5</li>
+          <li>Skill #6</li>
+          <li>Skill #7</li>
+          <li>Skill #8</li>
+        </ul>
       </div>
     </div>
   </div>
 </div>
+
 
 </body>
 </html>
