--- a/Lab1/sawyer.html
+++ b/Lab1/sawyer.html
@@ -1,1 +1,231 @@
-<p>hello world!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="Resources/WV-monogram.svg">
+    <title>WeatherVanes | Sawyer M.</title>
+    <link rel="stylesheet" href="Resources/merged-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lacquer&display=swap" rel="stylesheet">
+</head>
+<body>
+   <div class="main">
+  <div class="picture-stack" style="
+      background: url(Resources/dark-souls-larger.png) center;
+      background-size: cover;
+      background-repeat: no-repeat;">
+    <div class="header">
+      <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
+      <div class="separating-div"></div>
+      <div class="members">MEMBERS</div>
+      <a href="kat.html" class="member-1">I</a>
+      <a href="manny.html" class="member-2">II</a>
+      <a href="mj.html" class="member-3">III</a>
+      <a href="ryan.html" class="member-4">IV</a>
+      <a href="sawyer.html" class="member-5">V</a>
+    </div>
+
+    <div class="hero">
+      <div class="member-number">
+        <div class="weather-vanes-title">I</div>
+      </div>
+      <div class="headshot-and-name">
+        <img src="Resources/Sawyer.jpeg" style="aspect-ratio: inherit;" height="300px" />
+        <div class="weather-vanes-title2">Sawyer Montembeau</div>
+      </div>
+    </div>
+  </div>
+  <div class="portfolio-information">
+    <div class="contact-information">CONTACT INFORMATION</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="address">ADDRESS ∘</div>
+        </div>
+        <div class="description">
+          <div class="desc">
+            41 Fletcher St, Kennebunk ME 04043
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="phone">PHONE ∘</div>
+        </div>
+        <div class="description">
+          <div class="_207-337-1602">(207) 337-1602</div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="email">EMAIL ∘</div>
+        </div>
+        <div class="description">
+          <div class="montes3-rpi-edu">montes3@rpi.edu</div>
+        </div>
+      </div>
+    </div>
+    <div class="introduction">INTRODUCTION</div>
+    <div class="introduction-statement">
+      <div
+        class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum"
+      >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="education">EDUCATION</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="secondary-school">SECONDARY SCHOOL ∘</div>
+        </div>
+        <div class="description">
+          <div class="Kennebunk High School">
+            Kennebunk High School
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="university-institution">UNIVERSITY / INSTITUTION ∘</div>
+        </div>
+        <div class="description">
+          <div class="rensselaer-polytechnic-institute">
+            Rensselaer Polytechnic Institute
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="degree-program">DEGREE / PROGRAM</div>
+        </div>
+        <div class="description">
+          <div class="majors">
+            Dual B.S. in Computer Science and Information Technology & Web Science 
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="dates">DATES</div>
+        </div>
+        <div class="description">
+          <div class="august-2022-may-2026">August 2023 - May 2027</div>
+        </div>
+      </div>
+    </div>
+    <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
+    <div class="projects-accomplishments2">
+      <div
+        class="description"
+      >
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="work-experience">WORK EXPERIENCE</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-1-include-job-title">
+            Kennebunkport Parks and Recreation - Lead Summer Camp Counselor
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">June 2021 - August 2024</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-2-include-job-title">
+            WORK EXPERIENCE #2 (Include Job Title)
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">Start Date - End Date</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-3-include-job-title">
+            WORK EXPERIENCE #3 (Include Job Title)
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">Start Date - End Date</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+    </div>
+    <div class="skills">SKILLS</div>
+    <div class="skills2">
+      <div
+        class="skill-1-skill-2-skill-3-skill-4-skill-5-skill-6-skill-7-skill-8"
+      >
+        <ul
+          class="skill-1-skill-2-skill-3-skill-4-skill-5-skill-6-skill-7-skill-8-span"
+        >
+          <li>Skill #1</li>
+          <li>Skill #2</li>
+          <li>Skill #3</li>
+          <li>Skill #4</li>
+          <li>Skill #5</li>
+          <li>Skill #6</li>
+          <li>Skill #7</li>
+          <li>Skill #8</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+</body>
+</html>
