sawyer.html work and started readme file

--- a/Lab1/sawyer.html
+++ b/Lab1/sawyer.html
@@ -32,7 +32,7 @@
         <div class="weather-vanes-title">V</div>
       </div>
       <div class="headshot-and-name">
-        <img src="Resources/Sawyer.jpeg" style="aspect-ratio: inherit;" height="300" alt="Sawyer Montembeau"/>
+        <img src="Resources/Sawyer.JPG" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Sawyer Montembeau"/>
         <div class="weather-vanes-title2 fn">Sawyer Montembeau</div>
       </div>
     </div>
@@ -220,7 +220,7 @@
         <div class = info>
           <ul>
             <li>Supervised and ensured the safety of children in an after-school program, maintaining a secure and engaging environment</li>
-            <li>Planned and facilitated educational and recreational activities that promoted social, emotional, and physical development</li>
+            <li>Planned and facilitated educational and recreational activities that promoted social, emotional, and physical development for attending campers</li>
             <li>Communicated effectively with parents and guardians regarding their children's progress and any concerns</li>
             <li>Worked collaboratively with a team of counselors to create a cohesive and supportive atmosphere for all participants</li>
           </ul>
@@ -238,12 +238,12 @@
       </div>
       <div class="work-exp-details">
         <div class = info>
-            <ul>
-                <li>Worked on a team to develop and maintain web applications, contributing to both front-end and back-end development tasks</li>
-                <li>Participated in code reviews and collaborated with senior developers to ensure code quality and adherence to best practices</li>
-                <li>Assisted in the design and implementation of new features, utilizing technologies such as React, Node.js, and SQL databases</li>
-                <li>Gained experience in agile development methodologies, attending daily stand-ups and sprint planning sessions</li>
-            </ul>
+          <ul>
+            <li>Worked on a team to develop and maintain web applications, contributing to both front-end and back-end development tasks</li>
+            <li>Participated in code reviews and collaborated with senior developers to ensure code quality and adherence to best practices for software development</li>
+            <li>Assisted in the design and implementation of new features, utilizing technologies such as React, Node.js, and SQL databases</li>
+            <li>Gained experience in agile development methodologies, attending daily stand-ups and sprint planning sessions</li>
+          </ul>
         </div>
       </div>
     </div>
