added JS script for showing box on hovering over members

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -25,11 +25,11 @@
       <a href="#prev-works" style="padding: 0px;"><div class="previous-works">PREVIOUS WORKS</div></a>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
-      <a href="kat.html" class="member-1">I</a>
-      <a href="manny.html" class="member-2">II</a>
-      <a href="mj.html" class="member-3">III</a>
-      <a href="ryan.html" class="member-4">IV</a>
-      <a href="sawyer.html" class="member-5">V</a>
+        <a href="kat.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+        <a href="manny.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
+        <a href="mj.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
+        <a href="ryan.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
+        <a href="sawyer.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Sawyer.JPG" data-info="Member 5">V</a>
     </div>
     <div class="hero">
       <div class="weather-vanes-logo-svg-1">
@@ -102,5 +102,13 @@
   </div>
 </div>
 
+
+<div id="member-hover-card" class="member-card">
+  <img id="member-card-image" src="script" alt="Team Member">
+  <div id="member-card-name"></div>
+  <div id="member-card-info"></div>
+</div>
+
+<script src="Resources/main.js"></script>
 </body>
 </html>
