--- a/Lab1/sawyer.html
+++ b/Lab1/sawyer.html
@@ -20,11 +20,11 @@
       <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
-      <a href="kat.html" class="member-1">I</a>
-      <a href="manny.html" class="member-2">II</a>
-      <a href="mj.html" class="member-3">III</a>
-      <a href="ryan.html" class="member-4">IV</a>
-      <a href="sawyer.html" class="member-5">V</a>
+        <a href="kat.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+        <a href="manny.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
+        <a href="mj.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
+        <a href="ryan.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
+        <a href="sawyer.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Sawyer.JPG" data-info="Member 5">V</a>
     </div>
 
     <div class="hero">
@@ -73,13 +73,9 @@
     <div class="introduction">INTRODUCTION</div>
     <div class="introduction-statement">
       <div class="introduction-statement-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+        A results-oriented and collaborative software developer currently pursuing a dual degree in Computer Science and ITWS at Rensselaer Polytechnic Institute. 
+        With experience in full-stack web development, game design, and software engineering, I excel at turning project requirements into functional applications. 
+        I am seeking to leverage my skills in a software engineering internship role for Summer 2026.
       </div>
     </div>
     <div class="education">EDUCATION</div>
@@ -261,5 +257,13 @@
   </div>
 </div>
 
+
+<div id="member-hover-card" class="member-card">
+  <img id="member-card-image" src="script" alt="Team Member">
+  <div id="member-card-name"></div>
+  <div id="member-card-info"></div>
+</div>
+
+<script src="Resources/main.js"></script>
 </body>
 </html>
